Use hex-encoding for HMAC-SHA1 signature
As described in the documentation ( https://pushpad.xyz/docs/identifying_users ), the signature should be hex-encoded. Base64-encoded signatures get rejected.